tests/fixtures/language/v3/valid/rules/rule-with-config.allium
-- allium: 3

entity Token {
    expires_at: Timestamp
}

config {
    token_lifetime: Duration = 24.hours
}

rule IssueToken {
    when: TokenRequested()
    ensures: Token.created(expires_at: now + config.token_lifetime)
}
