tests/fixtures/language/v3/invalid/config/undefined-config-reference.allium
-- allium: 3

config {
    token_lifetime: Duration = 1.hour
}

entity Token {
    expires_at: Timestamp
}

rule IssueToken {
    when: Issue()
    ensures: Token.created(expires_at: now + config.NOT_DECLARED)
}
